syntax = "proto3";

package bytebase.store;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option go_package = "generated-go/store";

// InstanceOptions is the option for instances.
message InstanceOptions {
  reserved 1;

  // How often the instance is synced.
  google.protobuf.Duration sync_interval = 2;

  // The maximum number of connections.
  // The default is 10 if the value is unset or zero.
  int32 maximum_connections = 3;
}

// InstanceMetadata is the metadata for instances.
message InstanceMetadata {
  // The lower_case_table_names config for MySQL instances.
  // It is used to determine whether the table names and database names are case sensitive.
  int32 mysql_lower_case_table_names = 1;

  google.protobuf.Timestamp last_sync_time = 2;
}
